# UEVR

./: .gitmodules  CMakeLists.txt  README.md  cmake.toml
examples/: ArmsAndGoggles.lua  Avowed.lua  CONFIG.lua  MoonMan_VRFix.lua  UEHelperFunctions.lua  cinematic_detect (1).lua  cinematic_detect.lua  cvar_setter_example.cpp  new 2.lua
examples/BrightMemoryInfinite-Win64-Shipping/: config.txt  imgui.ini
examples/BrightMemoryInfinite-Win64-Shipping/scripts/: BMI_VRFix.lua
examples/BrightMemoryInfinite-Win64-Shipping/uobjecthook/: 16600260717521669332_mc_state.json
examples/HolsterAndMore-main/HolsterAndMore-main/: HolsterScript.lua  README.md
examples/JediFallenOrderVR-main/JediFallenOrderVR-main/UEVRProfile/: config.txt  cvars_data.txt  cvars_standard.txt
examples/JediFallenOrderVR-main/JediFallenOrderVR-main/UEVRProfile/scripts/: BodyNArms.luabb  CameraManager.lua  Controls.lua  Handsmain.lua  Main.luabb  SaberMelee.lua
examples/JediFallenOrderVR-main/JediFallenOrderVR-main/UEVRProfile/uobjecthook/: 12736089717992283597_props.json  16176243656594277639_props.json  16921994646339488437_props.json  18171511579091018680_props.json  3169871665401617204_props.json  3674312916086310512_props.json  490709800040775541_props.json  495868234515777733_props.json  7613546215494275428_mc_state.json  8524043477819366861_props.json
examples/MoonMan-Win64-Shipping/: config.txt  imgui.ini
examples/MoonMan-Win64-Shipping/scripts/: MoonMan_VRFix.lua
examples/MoonMan-Win64-Shipping/uobjecthook/: 10086988731222750332_mc_state.json  10086988731222750332_props.json  13308950881273333265_mc_state.json  13308950881273333265_props.json  2197466171114141882_mc_state.json  2197466171114141882_props.json  442182585446913256_props.json
examples/OblivionVR-main/OblivionVR-main/: README.md
examples/OblivionVR-main/OblivionVR-main/Profile/: ProfileDescription.md  ProfileMeta.json  config.txt
examples/OblivionVR-main/OblivionVR-main/Profile/data/: main-config.json
examples/OblivionVR-main/OblivionVR-main/Profile/scripts/: Attachements.lua  CameraManager.lua  Handsmain.lua  HolsterScript.lua  Lighting.lua  (+7 more)
examples/ObserverSystemRedux/: config.txt  imgui.ini  user_script.txt
examples/ObserverSystemRedux/scripts/: Tokio_VRFix.lua
examples/ObserverSystemRedux/uobjecthook/: camera_state.json
examples/ReadyOrNotVR-main/ReadyOrNotVR-main/Arms/: ProfileDescription.md  ProfileMeta.json  config.txt  imgui.ini
examples/ReadyOrNotVR-main/ReadyOrNotVR-main/LeftHanded/: config.txt
examples/ReadyOrNotVR-main/ReadyOrNotVR-main/ReadyOrNot-Win64-Shipping/: ProfileDescription.md  ProfileMeta.json  config.txt  imgui.ini
examples/Remnant-2-VR-main/Remnant-2-VR-main/: README.md
examples/Remnant-2-VR-main/Remnant-2-VR-main/Remnant2-Win64-Shipping/: imgui.ini
examples/Remnant1-UEVR-main/Remnant1-UEVR-main/: README.md
examples/Remnant1-UEVR-main/Remnant1-UEVR-main/scripts/: remnant-controls.lua  remnant-main.lua
examples/Remnant1-UEVR-main/Remnant1-UEVR-main/src/: Plugin.cpp  Plugin.hpp
examples/TOW_UEVR-main/TOW_UEVR-main/scripts/: main.lua
examples/Terminator-Resistance-VR-main/Terminator-Resistance-VR-main/: README.md
examples/Terminator-Resistance-VR-main/Terminator-Resistance-VR-main/Terminator-Win64-Shipping/: config.txt  cvars_data.txt  cvars_standard.txt  imgui.ini  user_script.txt
examples/UEVRTargetPercentages-main/UEVRTargetPercentages-main/: screenpercentagetargets.lua
examples/UEVR_GTASADE-main/UEVR_GTASADE-main/: CameraController.cpp  CameraController.h  GTASADE_Plugin.cpp  LICENSE  MemoryManager.cpp  MemoryManager.h  PlayerManager.cpp  PlayerManager.h  README.md  SettingsManager.cpp  SettingsManager.h  UEVR_GTASADE.sln  Utilities.cpp  Utilities.h  VRmod.vcxproj  VRmod.vcxproj.filters  WeaponManager.cpp  WeaponManager.h
examples/UEVR_GTASADE-main/UEVR_GTASADE-main/LUA/: GTASADE_LeftHanded.lua  GTASADE_LuaEvents.lua  GTASADE_Scope.lua
examples/WayOfTheHunter-UEVR-main/WayOfTheHunter-UEVR-main/: README.md
examples/WayOfTheHunter-UEVR-main/WayOfTheHunter-UEVR-main/Main/: cameras.txt  config.txt  cvars_data.txt  cvars_standard.txt
examples/alt_dpad_plugin/: CMakeLists.txt  Plugin.cpp  README.md
examples/button_remapper_plugin/: CMakeLists.txt  Plugin.cpp  README.md  build.bat
examples/cutscene_detection_plugin/: CMakeLists.txt  Plugin.cpp  README.md  build.bat
examples/cvar_plugin/: Plugin.cpp
examples/fps_counter_plugin/: CMakeLists.txt  Plugin.cpp  README.md  build.bat
examples/hogwarts_vr_sdk/camera_and_player_files/: CameraActor.hpp  CameraAnim.cpp  CameraAnim.hpp  CameraAnimInst.cpp  CameraAnimInst.hpp  CameraBlockingVolume.hpp  CameraCacheEntry.cpp  CameraCacheEntry.hpp  CameraComponent.cpp  CameraComponent.hpp  CameraCutInfo.cpp  CameraExposureSettings.cpp  CameraShakeBase.hpp  CameraShakeInfo.cpp  CameraShakePattern.cpp  CameraShakePattern.hpp  CameraShakeScrubParams.hpp  CameraShakeSourceActor.cpp  CameraShakeSourceActor.hpp  CameraShakeSourceComponent.cpp  CameraShakeSourceComponent.hpp  CameraShakeStartParams.hpp  CameraShakeStopParams.hpp  CameraShakeUpdateParams.hpp  CameraShakeUpdateResult.hpp
examples/hzbocclusion_plugin/: Plugin.cpp
examples/lua-api/examples/: Alices_Lullaby_CJ117-BudWheizzah.lua  RTypeFinal2.lua  ScarsAbove_VRFix_CJ117.lua  Snowbreak_FP.lua  VLADiK_BRUTAL_VRFix_CJ117.lua  WutheringWaves_by_polar.lua  cinematic_detect.lua  lt-aim.lua  movie-fix.lua  test4.lua  ui_fix.lua  ui_fix2.lua
examples/lua-api/examples/scripts/: Arms.lua  CameraManager.lua  ControlInput.lua  HolsterScript.lua  Melee.lua  main.lua
examples/turnchanges_dll_plugin/: CMakeLists.txt  Plugin.cpp  README.md  TurnChangesPlugin.cpp  build.bat
examples/uevr-index-controls-main/: _interaction_profiles_valve_index_controller.json  main.cpp
examples/uevr-joytokey-main/uevr-joytokey-main/: main.cpp  main.h
imgui_hook_plugin/: CMakeLists.txt  Plugin.cpp  README.md
plugins/FPSPlotterPlugin/: CMakeLists.txt  Plugin.cpp  README.md
src/hooks/: DInputHook.cpp  DInputHook.hpp
src/mods/: FrameworkConfig.cpp  FrameworkConfig.hpp  VR.cpp  VR.hpp
(+155 files in other folders)
